@@ -2856,7 +2856,7 @@
     </tr>
     <tr>
       <td><pre>-autopause &lt;1|0&gt;</pre></td>
-      <td>Enable or disable automatic pause/continue of emulation, when
+      <td>Enable or disable automatic pause/continue of emulation when
         Stella loses/gains focus.</td>
     </tr>
     <tr>
@@ -3972,7 +3972,7 @@
           <tr><td>Fast SuperCharger load</td><td>Skip progress loading bars for SuperCharger ROMs</td><td>-fastscbios</td></tr>
           <tr><td>Show UI messages</td><td>Overlay UI messages onscreen</td><td>-uimessages</td></tr>
           <tr><td>
-            Automatic pause</td><td>Enable or disable automatic pause/continue of emulation,
+            Automatic pause</td><td>Enable or disable automatic pause/continue of emulation
             when Stella loses/gains focus.</td><td>-autopause
           </td></tr>
           <tr><td>Confirm exiting...</td><td>Display a popup when emulation is exited</td><td>-confirmexit</td></tr>
